# BPIManager_for_bms

./: README.md  culc_bpi.py  main.py  process_data.py  pyproject.toml  scoredata.db
data/: insane.json  insane.pkl
