[project]
name = "bpimanager-for-bms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "html5lib>=1.1",
    "ipykernel>=6.29.5",
    "japanize-matplotlib>=1.1.3",
    "lxml>=5.3.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "pyarrow>=19.0.1",
    "pyodbc>=5.2.0",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "setuptools>=78.1.0",
    "sqlalchemy>=2.0.40",
    "tqdm>=4.67.1",
]
